SimpleHttp/.helm/templates/1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test-svc
spec:
  selector:
    app: service_test_pod
  ports:
  - port: 80
    targetPort: http
