SimpleHttp/.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  type: ClusterIP
  selector:
    app: service_test_pod
  ports:
  - protocol: TCP
    port: 8010
    #targetPort: http
